--- a/screenShotSaver/App.config
+++ b/screenShotSaver/App.config
@@ -1,6 +1,30 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="screenShotSaver.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
+    <userSettings>
+        <screenShotSaver.Properties.Settings>
+            <setting name="PATH" serializeAs="String">
+                <value>C:\\</value>
+            </setting>
+            <setting name="NAME" serializeAs="String">
+                <value>screenShot</value>
+            </setting>
+            <setting name="Email" serializeAs="String">
+                <value>telahi@stira.sa</value>
+            </setting>
+            <setting name="FrameCounter" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="EmailCounter" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </screenShotSaver.Properties.Settings>
+    </userSettings>
 </configuration>
